--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 reception_layer/models/*.pth filter=lfs diff=lfs merge=lfs -text
+models/yes_no_classification_model.pth filter=lfs diff=lfs merge=lfs -text
