--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-reception_layer/models/*.pth filter=lfs diff=lfs merge=lfs -text
-models/yes_no_classification_model.pth filter=lfs diff=lfs merge=lfs -text
+models/*.pth filter=lfs diff=lfs merge=lfs -text
