--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-models/*.pth filter=lfs diff=lfs merge=lfs -text
+models/yes_no_classification_model.pth filter=lfs diff=lfs merge=lfs -text
+models/module_classification_model.pth filter=lfs diff=lfs merge=lfs -text
+models/app_name_recognizer.pth filter=lfs diff=lfs merge=lfs -text
