--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.7.2",
+    "socket.io-client": "^4.7.5",
     "sqlite3": "^5.1.7"
   }
 }
